--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,11 +46,12 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
+
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.room:room-runtime:2.4.2'
-    kapt 'androidx.room:room-compiler:2.4.2'
-    implementation 'com.github.bumptech.glide:glide:4.13.0'
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
@@ -58,6 +59,14 @@ dependencies {
     implementation 'androidx.camera:camera-camera2:1.1.0-beta03'
     implementation 'androidx.camera:camera-lifecycle:1.1.0-beta03'
     implementation 'androidx.camera:camera-view:1.1.0-beta03'
+
+    implementation 'androidx.room:room-ktx:2.5.0-alpha01'
+    kapt 'androidx.room:room-compiler:2.5.0-alpha01'
+
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
